<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>br.com.wonder</groupId>
  <artifactId>wonderagent-root</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>WonderAgent</name>
  <description>Agente pull de deploy on-premises — Windows 64, GraalVM Native Image</description>

  <modules>
    <module>agent-model</module>
    <module>agent-central-client</module>
    <module>agent-core</module>
    <module>agent-drivers</module>
    <module>agent-cli</module>
  </modules>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <quarkus.platform.version>3.9.5</quarkus.platform.version>
    <picocli.version>4.7.6</picocli.version>
    <lombok.version>1.18.38</lombok.version>
    <zsync.version>0.1.0</zsync.version>
    <junit.version>5.10.2</junit.version>
    <mockito.version>5.11.0</mockito.version>
    <assertj.version>3.25.3</assertj.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Módulos internos -->
      <dependency>
        <groupId>br.com.wonder</groupId>
        <artifactId>agent-model</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>br.com.wonder</groupId>
        <artifactId>agent-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>br.com.wonder</groupId>
        <artifactId>agent-drivers</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>br.com.wonder</groupId>
        <artifactId>agent-central-client</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>io.takari.zsync</groupId>
        <artifactId>zsync-core</artifactId>
        <version>${zsync.version}</version>
      </dependency>

      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${picocli.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- Test -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus.platform</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.platform.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>io.smallrye</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>3.1.7</version>
          <executions>
            <execution>
              <id>make-index</id>
              <goals><goal>jandex</goal></goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <argLine>-Dnet.bytebuddy.experimental=true</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
